Fix: update minor bug

--- a/dacon/2023전력사용량예측AI경진대회/eda.ipynb
+++ b/dacon/2023전력사용량예측AI경진대회/eda.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "100"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -441,13 +441,35 @@
        "4     5  건물기타  205884.00  150000.00         -         2557      1000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "building_info.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['건물기타', '공공', '대학교', '데이터센터', '백화점및아울렛', '병원', '상용', '아파트', '연구소',\n",
+       "        '지식산업센터', '할인마트', '호텔및리조트'], dtype=object),\n",
+       " 12)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "building_info['건물유형'].unique(), len(building_info['건물유형'].unique()) "
    ]
   },
   {
